--- a/styles/app.css
+++ b/styles/app.css
@@ -786,7 +786,7 @@ img {
         rgba(254, 245, 245, 0.85),
         rgba(254, 245, 245, 0.85)
       ),
-      url(./img/Services/background.png);
+      url("./img/Services/background.png");
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -898,15 +898,15 @@ img {
 }
 
 .instantRent_bg {
-  background-image: url(./img/Services/instant_Rent.png);
+  background-image: url("/public/img/Services/instant_Rent.png");
 }
 
 .privateDriver_bg {
-  background-image: url(./img/Services/privateDriverBg.png);
+  background-image: url("./img/Services/privateDriverBg.png");
 }
 
 .longTrip_bg {
-  background-image: url(./img/Services/longTrip_Bg.png);
+  background-image: url("./img/Services/longTrip_Bg.png");
 }
 
 .socials {
